--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#ffffff",
-  "theme_color": "#4527a0",
+  "theme_color": "#2cb5e8",
   "icons": [{
     "src": "images/48.png",
     "sizes": "48x48",
