--- a/manifest.json
+++ b/manifest.json
@@ -12,19 +12,19 @@
     "sizes": "48x48",
     "type": "image/png"
   }, {
-    "src": "images/touch/72.png",
+    "src": "images/72.png",
     "sizes": "72x72",
     "type": "image/png"
   }, {
-    "src": "images/touch/96.png",
+    "src": "images/96.png",
     "sizes": "96x96",
     "type": "image/png"
   }, {
-    "src": "images/touch/144.png",
+    "src": "images/144.png",
     "sizes": "144x144",
     "type": "image/png"
   }, {
-    "src": "images/touch/192.png",
+    "src": "images/192.png",
     "sizes": "192x192",
     "type": "image/png"
   }]
